app1/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-foo-app1
  namespace: apps
spec:
  replicas: 6
  strategy:
    blueGreen:
      activeService: rollouts-foo-app1-active
      previewService: rollouts-foo-app1-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 15
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: rollouts-foo-app1
  template:
    metadata:
      labels:
        app: rollouts-foo-app1
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      # - image: 192.168.0.180:8000/probeserver:latest
      - image: public.ecr.aws/i4a3l2a7/probeserver:latest
        name: probeserver
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
