app1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-foo-active
  namespace: apps
  labels:
    app: rollouts-foo
spec:
  ports:
    - name: svc-port
      port: 80
      protocol: TCP
      targetPort: 80
      # nodePort: 30090
  selector:
    app: rollouts-foo
  # type: NodePort
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-foo-preview
  namespace: apps
  labels:
    app: rollouts-foo
spec:
  ports:
    - name: svc-port
      port: 80
      protocol: TCP
      targetPort: 80
      # nodePort: 30091
  selector:
    app: rollouts-foo
  # type: NodePort
  type: ClusterIP
